--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
 
     <h2>Tools to follow users on other instances</h2>
     <ul>
-      <li><a href="https://github.com/lartsch/FediAct">FediAct</a>: Chrome/Firefox extension that simplifies interactions on other Mastodon instances than your own.</li>
+      <li><strike><a href="https://github.com/lartsch/FediAct">FediAct</a>: Chrome/Firefox extension that simplifies interactions on other Mastodon instances than your own.</strike> No longer maintained</li>
       <li><a href="https://chrome.google.com/webstore/detail/graze-for-mastodon/epocinhmkcnjfjobnglchpbncndobblj">Graze for Mastodon (Chrome)</a>: Graze is 1-click follow, favorite, boost, and bookmark for Mastodon, no matter what instance you call home.</li>
       <li><a href="https://addons.mozilla.org/en-US/firefox/addon/graze/">Graze for Mastodon (Firefox)</a>: Graze is 1-click follow, favorite, boost, and bookmark for Mastodon, no matter what instance you call home.</li>
-      <li><a href="https://github.com/raikasdev/mastodon4-redirect">Mastodon4-redirect</a>: A Chrome and Firefox extensions that redirects users from Mastodon4 instances to their home instance.</li>
-      <li><a href="https://fo.llow.social/roam">Roam with the Mastodon browser Extension</a>: Share interesting links and sites. Follow anyone on any instance. Boost and favorite posts with one click.</li>
+      <li><strike><a href="https://github.com/raikasdev/mastodon4-redirect">Mastodon4-redirect</a>: A Chrome and Firefox extensions that redirects users from Mastodon4 instances to their home instance.</strike> No longer maintained, end-of-support</li>
+      <li><strike><a href="https://fo.llow.social/roam">Roam with the Mastodon browser Extension</a>: Share interesting links and sites. Follow anyone on any instance. Boost and favorite posts with one click.</strike> Dead link</li>
       <li><a href="https://github.com/bramus/mastodon-profile-redirect">Mastodon Profile Redirect</a>: View Mastodon profiles on your Mastodon instance.</li>
     </ul>
 
@@ -121,13 +121,7 @@
     <ul>
       <li><a href="https://federike.social">Federike</a>: Federike is a web app made to help you organize your Mastodon using lists.</li>
     </ul>
-    
-    <h2>Algorithms and feeds</h2>
-    <ul>
-      <li><a href="https://fediview.com">fediview</a>: The algorithmic timeline for Mastodon</li>
-      <li><a href="https://foryoufeed.vercel.app">foryoufeed</a>: Fedi-Feed features a customizable algorithm for sorting your feed.</a>
-    </ul>
-    
+
     <h2>Timeline, search and profile tools</h2>
     <ul>
       <li><a href="https://cathode.church/fedi-scraper-counter.html">Fedi-Scraper Counter</a>: Counts the number of days since someone tried to make a search tool for the Fediverse.</li>
